<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <ImageView
        android:id="@+id/iconImage"
        android:layout_width="126dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/icon_image_description"
        android:src="@drawable/android" />
    
    <EditText
	    android:id="@+id/user"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/user"
	    android:inputType="text" />
    
    <EditText
	    android:id="@+id/password"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonNewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/register_button" />
 
</LinearLayout>
